# nixus

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/migrations/: 001_initial_schema.sql  002_budget_tables.sql  003_expenses_table.sql  004_recreate_expenses_table.sql  005_accounts.sql  006_audit_log.sql  007_passive_assets.sql  008_net_worth_snapshots.sql  009_chat_tables.sql  010_audit_log_indexes.sql  011_income_tables.sql  012_income_entry_date.sql  013_chat_message_type.sql  014_config_table.sql  015_merchant_category_hints.sql  016_recurring_expenses.sql  017_chat_agent_id.sql  018_maintenance_tables.sql  019_custom_service_logs.sql  020_maintenance_custom_tasks.sql  021_expense_income_account_id.sql
apps/desktop/src-tauri/src/: credentials.rs  error.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/ai/: cc_parser.rs  chat.rs  mod.rs
apps/desktop/src-tauri/src/commands/: account.rs  asset.rs  backup.rs  budget.rs  chat.rs  dashboard.rs  expense.rs  financial_health.rs  import.rs  income.rs  maintenance.rs  mod.rs  net_worth.rs  onboarding.rs  projection.rs  recurring.rs  settings.rs  spending_trends.rs  yearly_summary.rs
apps/desktop/src-tauri/src/db/: account.rs  aggregates.rs  asset.rs  audit.rs  budget.rs  chat.rs  config.rs  dashboard.rs  expense.rs  financial_health.rs  income.rs  maintenance.rs  mod.rs  net_worth.rs  projection.rs  recurring.rs  spending_trends.rs  yearly_summary.rs
apps/desktop/src-tauri/src/financial_health/: constants.rs  (+2 more)
(+459 files in other folders)
