[package]
name = "nkbaz-finance"
version = "0.1.21"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nkbaz_finance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tempfile = "3"
aws-config = "1.8.15"
aws-sdk-bedrockruntime = "1.127.0"
tokio = { version = "1.50.0", features = ["full"] }
regex = "1"
keyring = "4"
keyring-core = "1"
async-openai = "0.27"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2"

